--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,8 @@ jobs:
 
       - name: Set game configuration
         env:
-          APP_NAME: My Twine game
-          DESCRIPTION: My Twine game description
+          APP_NAME: Sürgün gerçeklik
+          DESCRIPTION: "Anormal özellikleri olan bir dünyaya geçen ve oradan kurtulmaya çalışan 3 gencin hayat hikayesini anlatan bir interaktif hikaye oyunu (kendi hikayeni kendin seç kitabı): Sürgün Gerçeklik"
 
           # This must be of the format "N.N.N", where the N's are all numbers
           VERSION: 1.0.0
